no funciona la edicion de pedidos